	sawfish-ui.
	* lisp/sawfish/wm/commands/move-resize.jl
	* lisp/sawfish/wm/util/compat.jl: Re-expose outline-modes by
	Christopher Bratusek. Brings back move-outline-mode and
	resize-outline-mode to sawfish-ui.
	* lisp/sawfish/wm/ext/error-handler.jl: Add error-handler both by
	Christopher Bratusek. Allows to print errors both on the screen and
	the standard-error.

2008-08-29  Janek Kozicki <cosurgi@gmail.com>
	* lisp/sawfish/wm/commands/grow-pack.jl
	* lisp/sawfish/wm/stacking.jl
	* lisp/sawfish/wm/util/rects.jl: Add stacking visibility patch by Timo
	Korvola. This fixes raise-lower window problems with xcomposite
	extension.

	* lisp/sawfish/wm/state/maximize.jl: Add maximize fullscreen xinerama
	patch by Jonathan Sambrook (Uploaded by Christopher Bratusek)

2008-08-07  Christopher Bratusek <nano-master@gmx.de>
	* themes/Makefile.in: install Elberg-tabbed 

2008-08-07  Scott Scriven <sawfish@toykeeper.net>
	* themes/Elberg-tabbed/: added Elberg-tabbed theme

2008-08-06  Guillermo S. Romero <gsromero@svn.gnome.org>
	* lisp/sawfish/wm/commands/x-cycle.jl
	* man/sawmill.texi: added after-cycle-step-hook and related docs,
	originally by Teika kazura. Changed some white space in the
	process.

2008-08-05  Timo Korvola <tkorvola@svn.gnome.org>
	* src/windows.c, man/sawmill.texi: Call property
	handlers in window-remprop. Make window-plist return
	the list itself not a copy

2008-08-05  Christopher Bratusek <nano-master@gmx.de>
	* themes/Makefile.in: actually install get-S-tabbed

	* themes/mxflat
	* themes/Makefile.in: add the mxflat theme

2008-08-05  Scott Scriven <sawfish@toykeeper.net>
	* themes/get-S-tabbed/: added get-S-tabbed theme

2008-08-05  Christopher Bratusek <nano-master@gmx.de>
	* configure.in
	* po/POTFILES.in
	* capplet/*
	* Makefile.in
	* sawfish.spec.in: removed the capplet

2008-08-04  Guillermo S. Romero <gsromero@svn.gnome.org>
	* lisp/sawfish/wm/menus.jl: added some missing accelerators in