@@ -1,5 +1,5 @@
 ;; autoload.jl -- Initialise auto-load functions
-;; $Id$
+;; $Id: autoload.jl,v 1.21 2002/08/18 21:30:05 jsh Exp $
 
 ;; Copyright (C) 1999 John Harper <john@dcs.warwick.ac.uk>
 
@@ -59,11 +59,11 @@
 (autoload-command (quote send-group-to-current-workspace) (quote sawfish.wm.commands.groups))
 (autoload-command (quote send-group-to-next-workspace) (quote sawfish.wm.commands.groups))
 (autoload-command (quote send-group-to-previous-workspace) (quote sawfish.wm.commands.groups))
-(autoload-command (quote move-group-to-current-viewport) (quote sawfish.wm.commands.groups) #:class 'viewport)
-(autoload-command (quote move-group-left) (quote sawfish.wm.commands.groups) #:class 'viewport)
-(autoload-command (quote move-group-right) (quote sawfish.wm.commands.groups) #:class 'viewport)
-(autoload-command (quote move-group-up) (quote sawfish.wm.commands.groups) #:class 'viewport)
-(autoload-command (quote move-group-down) (quote sawfish.wm.commands.groups) #:class 'viewport)
+(autoload-command (quote move-group-to-current-viewport) (quote sawfish.wm.commands.groups))
+(autoload-command (quote move-group-left) (quote sawfish.wm.commands.groups))
+(autoload-command (quote move-group-right) (quote sawfish.wm.commands.groups))
+(autoload-command (quote move-group-up) (quote sawfish.wm.commands.groups))
+(autoload-command (quote move-group-down) (quote sawfish.wm.commands.groups))
 (autoload-command (quote raise-group) (quote sawfish.wm.commands.groups) #:class 'advanced)
 (autoload-command (quote lower-group) (quote sawfish.wm.commands.groups) #:class 'advanced)
 (autoload-command (quote raise-lower-group) (quote sawfish.wm.commands.groups) #:class 'advanced)
@@ -152,30 +152,30 @@
 (autoload-command (quote quote-event) (quote sawfish.wm.util.keymap))
 (autoload-placement-mode 'top-left 'sawfish.wm.placement.top-left #:for-normal t)
 (autoload-placement-mode 'off-center 'sawfish.wm.placement.off-center)
-(autoload-command (quote set-viewport-linear) (quote "viewport-linear") #:type (backquote (and (labelled (backquote-unquote (_ "Index:")) (number 0)))) #:class 'viewport)
-(autoload-command (quote set-window-viewport-linear) (quote "viewport-linear") #:type (backquote (and (labelled (backquote-unquote (_ "Index:")) (number 0)))) #:class 'viewport)
-(autoload-command 'set-viewport-linear:1 'sawfish.wm.commands.viewport-linear #:class 'deprecated)
-(autoload-command 'set-window-viewport-linear:1 'sawfish.wm.commands.viewport-linear #:class 'deprecated)
-(autoload-command 'set-viewport-linear:2 'sawfish.wm.commands.viewport-linear #:class 'deprecated)
-(autoload-command 'set-window-viewport-linear:2 'sawfish.wm.commands.viewport-linear #:class 'deprecated)
-(autoload-command 'set-viewport-linear:3 'sawfish.wm.commands.viewport-linear #:class 'deprecated)
-(autoload-command 'set-window-viewport-linear:3 'sawfish.wm.commands.viewport-linear #:class 'deprecated)
-(autoload-command 'set-viewport-linear:4 'sawfish.wm.commands.viewport-linear #:class 'deprecated)
-(autoload-command 'set-window-viewport-linear:4 'sawfish.wm.commands.viewport-linear #:class 'deprecated)
-(autoload-command 'set-viewport-linear:5 'sawfish.wm.commands.viewport-linear #:class 'deprecated)
-(autoload-command 'set-window-viewport-linear:5 'sawfish.wm.commands.viewport-linear #:class 'deprecated)
-(autoload-command 'set-viewport-linear:6 'sawfish.wm.commands.viewport-linear #:class 'deprecated)
-(autoload-command 'set-window-viewport-linear:6 'sawfish.wm.commands.viewport-linear #:class 'deprecated)
-(autoload-command 'set-viewport-linear:7 'sawfish.wm.commands.viewport-linear #:class 'deprecated)
-(autoload-command 'set-window-viewport-linear:7 'sawfish.wm.commands.viewport-linear #:class 'deprecated)
-(autoload-command 'set-viewport-linear:8 'sawfish.wm.commands.viewport-linear #:class 'deprecated)
-(autoload-command 'set-window-viewport-linear:8 'sawfish.wm.commands.viewport-linear #:class 'deprecated)
-(autoload-command 'set-viewport-linear:9 'sawfish.wm.commands.viewport-linear #:class 'deprecated)
-(autoload-command 'set-window-viewport-linear:9 'sawfish.wm.commands.viewport-linear #:class 'deprecated)
-(autoload-command (quote move-viewport-next) (quote sawfish.wm.commands.viewport-extras) #:class 'viewport)
-(autoload-command (quote move-viewport-previous) (quote sawfish.wm.commands.viewport-extras) #:class 'viewport)
-(autoload-command (quote move-window-previous) (quote sawfish.wm.commands.viewport-extras) #:class 'viewport)
-(autoload-command (quote move-window-next) (quote sawfish.wm.commands.viewport-extras) #:class 'viewport)
+(autoload-command (quote set-viewport-linear) (quote "viewport-linear") #:type (backquote (and (labelled (backquote-unquote (_ "Index:")) (number 0)))))
+(autoload-command (quote set-window-viewport-linear) (quote "viewport-linear") #:type (backquote (and (labelled (backquote-unquote (_ "Index:")) (number 0)))))
+(autoload-command 'set-viewport-linear:1 'sawfish.wm.commands.viewport-linear)
+(autoload-command 'set-window-viewport-linear:1 'sawfish.wm.commands.viewport-linear)
+(autoload-command 'set-viewport-linear:2 'sawfish.wm.commands.viewport-linear)
+(autoload-command 'set-window-viewport-linear:2 'sawfish.wm.commands.viewport-linear)
+(autoload-command 'set-viewport-linear:3 'sawfish.wm.commands.viewport-linear)
+(autoload-command 'set-window-viewport-linear:3 'sawfish.wm.commands.viewport-linear)
+(autoload-command 'set-viewport-linear:4 'sawfish.wm.commands.viewport-linear)
+(autoload-command 'set-window-viewport-linear:4 'sawfish.wm.commands.viewport-linear)
+(autoload-command 'set-viewport-linear:5 'sawfish.wm.commands.viewport-linear)
+(autoload-command 'set-window-viewport-linear:5 'sawfish.wm.commands.viewport-linear)
+(autoload-command 'set-viewport-linear:6 'sawfish.wm.commands.viewport-linear)
+(autoload-command 'set-window-viewport-linear:6 'sawfish.wm.commands.viewport-linear)
+(autoload-command 'set-viewport-linear:7 'sawfish.wm.commands.viewport-linear)
+(autoload-command 'set-window-viewport-linear:7 'sawfish.wm.commands.viewport-linear)
+(autoload-command 'set-viewport-linear:8 'sawfish.wm.commands.viewport-linear)
+(autoload-command 'set-window-viewport-linear:8 'sawfish.wm.commands.viewport-linear)
+(autoload-command 'set-viewport-linear:9 'sawfish.wm.commands.viewport-linear)
+(autoload-command 'set-window-viewport-linear:9 'sawfish.wm.commands.viewport-linear)
+(autoload-command (quote move-viewport-next) (quote sawfish.wm.commands.viewport-extras))
+(autoload-command (quote move-viewport-previous) (quote sawfish.wm.commands.viewport-extras))
+(autoload-command (quote move-window-previous) (quote sawfish.wm.commands.viewport-extras))
+(autoload-command (quote move-window-next) (quote sawfish.wm.commands.viewport-extras))
 (autoload-command (quote workspace-down) (quote sawfish.wm.ext.workspace-grid))
 (autoload-command (quote workspace-up) (quote sawfish.wm.ext.workspace-grid))
 (autoload-command (quote workspace-left) (quote sawfish.wm.ext.workspace-grid))
