@@ -238,7 +238,7 @@ The scrolling makes a number of increments equal to `scroll-viewport-steps'."
     #:spec "NX:\nNY:"
     #:type `(and (labelled ,(_ "Column:") (number 1))
 		 (labelled ,(_ "Row:") (number 1)))
-    #:class 'viewport)
+    #:class 'default)
 
   (define (activate-viewport-column x)
     "Select the specified viewport column."
@@ -247,7 +247,7 @@ The scrolling makes a number of increments equal to `scroll-viewport-steps'."
   (define-command 'activate-viewport-column activate-viewport-column
     #:spec "NX:"
     #:type `(and (labelled ,(_ "Column:") (number 1)))
-    #:class 'viewport)
+    #:class 'default)
 
   (define (activate-viewport-row y)
     "Select the specified viewport row."
@@ -256,7 +256,7 @@ The scrolling makes a number of increments equal to `scroll-viewport-steps'."
   (define-command 'activate-viewport-row activate-viewport-row
     #:spec "NY:"
     #:type `(and (labelled ,(_ "Row:") (number 1)))
-    #:class 'viewport)
+    #:class 'default)
 
   (define (move-window-to-viewport x y)
     "Move the current window to the specified viewport."
@@ -265,7 +265,7 @@ The scrolling makes a number of increments equal to `scroll-viewport-steps'."
   (define-command 'move-window-to-viewport move-window-to-viewport
     #:spec "NX:\nNY:"
     #:type '(and (labelled "X:" (number 1)) (labelled "Y:" (number 1)))
-    #:class 'viewport)
+    #:class 'default)
 
   (define (move-viewport-right)
     "Move the viewport one screen to the right."
@@ -312,14 +312,14 @@ The scrolling makes a number of increments equal to `scroll-viewport-steps'."
     "Move the window to the viewport above, and switch to that viewport."
     (move-window-to-viewport-and-move-viewport w 0 -1))
 
-  (define-command 'move-viewport-right move-viewport-right #:class 'viewport)
-  (define-command 'move-viewport-left move-viewport-left #:class 'viewport)
-  (define-command 'move-viewport-up move-viewport-up #:class 'viewport)
-  (define-command 'move-viewport-down move-viewport-down #:class 'viewport)
-  (define-command 'move-window-right move-window-right #:spec "%W" #:class 'viewport)
-  (define-command 'move-window-left move-window-left #:spec "%W" #:class 'viewport)
-  (define-command 'move-window-up move-window-up #:spec "%W" #:class 'viewport)
-  (define-command 'move-window-down move-window-down #:spec "%W" #:class 'viewport)
+  (define-command 'move-viewport-right move-viewport-right)
+  (define-command 'move-viewport-left move-viewport-left)
+  (define-command 'move-viewport-up move-viewport-up)
+  (define-command 'move-viewport-down move-viewport-down)
+  (define-command 'move-window-right move-window-right #:spec "%W")
+  (define-command 'move-window-left move-window-left #:spec "%W")
+  (define-command 'move-window-up move-window-up #:spec "%W")
+  (define-command 'move-window-down move-window-down #:spec "%W")
 
 
 ;;; session management, config
