@@ -21,6 +21,11 @@
 	* lisp/sawfish/wm/ext/error-handler.jl: Add error-handler both by
 	Christopher Bratusek. Allows to print errors both on the screen and
 	the standard-error.
+	* lisp/sawfish/wm/viewport.jl
+	* lisp/sawfish/wm/commands/viewport-linear.jl
+	* lisp/sawfish/wm/autoload.jl: Re-expose viewport bindings by
+	Christopher Bratusek. Return of the Viewport bindings.
+
 
 2008-08-29  Janek Kozicki <cosurgi@gmail.com>
 	* lisp/sawfish/wm/commands/grow-pack.jl
